--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Chidambaram S - Associate Software Engineer Portfolio">
-    <meta name="keywords" content="Software Engineer, Full Stack Developer, Java, Spring Boot, React, Portfolio">
-    <meta name="author" content="Chidambaram S">
-    <title>Chidambaram S | Software Engineer</title>
-    <meta property="og:title" content="Chidambaram S | Software Engineer">
-    <meta property="og:description" content="Experienced software engineer specializing in full-stack development and backend API design.">
+    <meta name="description" content="Raja Ganapathy D - Associate Software Engineer Portfolio">
+    <meta name="keywords" content="Associate Software Engineer, App Developer, Flutter, Portfolio">
+    <meta name="author" content="Raja Ganapathy D">
+    <title>Raja Ganapathy D | Associate Software Engineer</title>
+    <meta property="og:title" content="Raja Ganapathy D | Associate Software Engineer">
+    <meta property="og:description" content="2+ years of professional experience in Flutter application development using Dart, building scalable, production-ready mobile 
+ applications for Android and iOS.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://chidambaram.dev">
   </head>
   <body>
     <div id="root"></div>
